add resilience4j to enable circuit breaker features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ management.endpoints.web.exposure.include=*
 #spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=false
 eureka.instance.hostname=localhost
+resilience4j.retry.instances.sample-api.maxRetryAttempts=3
+resilience4j.retry.instances.sample-api.waitDuration=5s
+resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
