add more circuit breaker features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ eureka.instance.hostname=localhost
 resilience4j.retry.instances.sample-api.maxRetryAttempts=3
 resilience4j.retry.instances.sample-api.waitDuration=5s
 resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
+#resilience4j.circuitbreaker.instances.sample-api.failureRateThreshold=90
+resilience4j.ratelimiter.instances.sample-api.limitForPeriod=3
+resilience4j.ratelimiter.instances.sample-api.limitRefreshPeriod=60s
+resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=5
