--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
 resilience4j.ratelimiter.instances.sample-api.limitForPeriod=3
 resilience4j.ratelimiter.instances.sample-api.limitRefreshPeriod=60s
 resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=5
+# redis properties
+spring.cache.type=redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+#spring.data.redis.repositories.enabled=false
