--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,7 @@
+#server
 server.port=8000
 spring.application.name=currency-exchange-service
+spring.profiles.active=test
+#eureka
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka
-#datasource
-spring.jpa.database=H2
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:demo
-spring.jpa.show-sql=true
-spring.cloud.config.import-check.enabled=false
-# liquibase properties
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
-# actuator properties
-management.endpoints.web.exposure.include=*
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=false
 eureka.instance.hostname=localhost
-resilience4j.retry.instances.sample-api.maxRetryAttempts=3
-resilience4j.retry.instances.sample-api.waitDuration=5s
-resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
-#resilience4j.circuitbreaker.instances.sample-api.failureRateThreshold=90
-resilience4j.ratelimiter.instances.sample-api.limitForPeriod=3
-resilience4j.ratelimiter.instances.sample-api.limitRefreshPeriod=60s
-resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=5
-# redis properties
-spring.cache.type=redis
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-#spring.data.redis.repositories.enabled=false
