migrate H2 database to oracle

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:h2:mem:demo
 spring.jpa.show-sql=true
 # liquibase properties
 spring.liquibase.enabled=true
+liquibase.contexts=${spring.profiles.active}
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 # actuator properties
 management.endpoints.web.exposure.include=*
