--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -12,6 +12,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 # liquibase properties
 spring.liquibase.enabled=true
+liquibase.contexts=${spring.profiles.active}
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 # actuator properties
 management.endpoints.web.exposure.include=*
