--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,3 +23,5 @@ spring.redis.host=127.0.0.1
 spring.redis.port=6379
 # cloud config
 spring.cloud.config.import-check.enabled=false
+#default zipkin URL
+#spring.zipkin.base-url=http://127.0.0.1:9411/
