--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -30,3 +30,7 @@ spring.redis.host=127.0.0.1
 spring.redis.port=6379
 # cloud config
 spring.cloud.config.import-check.enabled=false
+#spring sleuth | 1.0=100%   0.5=50%  0.1=10%  0.05=5%
+spring.sleuth.sampler.probability=1.0
+#default zipkin URL
+#spring.zipkin.base-url=http://127.0.0.1:9411/
