--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,8 +8,6 @@ spring.jpa.show-sql=true
 spring.liquibase.enabled=true
 liquibase.contexts=${spring.profiles.active}
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
-# actuator properties
-management.endpoints.web.exposure.include=*
 # redis properties
 spring.cache.type=redis
 spring.redis.host=127.0.0.1
@@ -21,3 +19,8 @@ spring.sleuth.sampler.probability=1.0
 #default zipkin URL
 #spring.zipkin.base-url=http://127.0.0.1:9411/
 #spring.zipkin.sender.type=RABBIT
+# Spring boot admin server
+spring.boot.admin.client.url=http://localhost:9090
+# Actuator endpoints properties
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
